--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     plan: free
     buildCommand: |
       pip install -U pip
-      pip install -r requirements-render.txt
+      pip install -r requirements.txt
     startCommand: |
       cd rag_app && uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
