--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,9 @@ services:
       pip install -U pip
       pip install -r requirements.txt
     startCommand: |
-      cd rag_app && uvicorn main:app --host 0.0.0.0 --port $PORT
+      cd rag_app && uvicorn main_minimal:app --host 0.0.0.0 --port $PORT --timeout-keep-alive 120 --log-level info
     healthCheckPath: /health
+    autoDeploy: false
     envVars:
       - key: PYTHON_VERSION
         value: 3.12
